feat(cdn): running. getting 404. will solve

--- a/openresty/nginx.conf
+++ b/openresty/nginx.conf
@@ -1,31 +1,31 @@
-worker process auto;
+worker_processes  auto;
 
 events {
-    worker_connections 1024;
+    worker_connections  1024;
 }
 
 http {
-    include mime.types;
+    include       mime.types;
     default_type  application/octet-stream;
     sendfile        on;
     keepalive_timeout  65;
 
-    lua_package_path "/usr/local/openresty/lualib/?.lua;;";
+    lua_package_path "/usr/local/openresty/lua/?.lua;;";
     lua_shared_dict memcached_locks 1m;
 
     server {
-        listen 80;
-
+        listen       80; # The container listens on port 80
         server_name  localhost;
 
         location / {
+            # Execute the Lua script
             access_by_lua_file lua/cdn_logic.lua;
-            set $backend "http://golang_service:8081";
-            proxy_pass $backend;
+            
+            # Proxy to the Golang backend
+            proxy_pass http://golang_service:8081; 
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         }
-
     }
 }
